-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.6, 5.15.1
-
macos 10.15.7 xcode 12.1
OSX10.14
-
-
18f5b83e97828dd572eaf67c054a43aa5472a668 (qt/qtbase/dev) 120eb3b48cf1af902a8b03feb2ff1167b28883c9 (qt/qtbase/6.1)
As shown in images, the size grip is painted in Qt 5.9.6, but is missing with 5.15.1.
Code to reproduce:
#include <QLabel>
#include <QSizeGrip>
#include <QGridLayout>
MainWindow::MainWindow(QWidget *parent)
: QMainWindow(parent)
{
auto w = new QWidget;
auto g = new QGridLayout( w );
auto l = new QLabel( qVersion() );
auto r = new QSizeGrip( this );
r->setVisible( true );
g->setMargin( 0 );
g->addWidget( l, 0,0, 1,1 );
g->addWidget( r, 1,1, 1,1 );
setCentralWidget( w );
}