Document that a toplevel window QSizeGrip doesn't get rendered on macOS

Amends b8947e9194f0f88f464448ac51f6a05113d36a33 which removed the grip's
rendering unless they are in a QMdiSubwindow. This was a deliberate
choice to comply with the macOS HIG. Rather than putting in another
widget attribute, document that another style can be used.

Fixes: QTBUG-90945
Pick-to: 6.1
Change-Id: Id227fd31d8bafaaab7005e5ff5340da96c0f65b3
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>