src/widgets/widgets/qsizegrip.cpp
@@ -173,6 +173,10 @@ Qt::Corner QSizeGripPrivate::corner() const
     On some platforms the size grip automatically hides itself when the
     window is shown full screen or maximised.
 
+    \note On macOS, size grips are no longer part of the human interface
+    guideline, and won't show unless used in a QMdiSubWindow. Set another
+    style on size grips that you want to be visible in main windows.
+
     \table 50%
     \row \li \inlineimage fusion-statusbar-sizegrip.png Screenshot of a Fusion style size grip
     \li A size grip widget at the bottom-right corner of a main window, shown in the
